crates/integration-tests/src/tests/snapshots/integration_tests__tests__local_relationship__queries_through_relationship_with_null_value.snap
---
source: crates/integration-tests/src/tests/local_relationship.rs
expression: "graphql_query(r#\"\n            query {\n              comments(where: {id: {_eq: \"5a9427648b0beebeb69579cc\"}}) { # this comment does not have a matching movie\n                movie {\n                  comments {\n                    email\n                  }\n                } \n              }\n            }\n            \"#).run().await?"
---
data:
  comments:
    - movie: ~
errors: ~
